--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 }
 
 .center {
-  padding-left: calc(50% - 1024px / 2);
-  padding-right: calc(50% - 1024px / 2);
+  padding-left: calc(50% - 512px);
+  padding-right:calc(50% - 512px) ;
 }
 
 .window {
@@ -46,7 +46,7 @@ body {
   line-height: 48px;
 
   text-align: center;
-  font-feature-settings: "pnum" on, "lnum" on;
+  font-feature-settings: "pnum"on, "lnum"on;
 
   color: #004980;
 }
@@ -100,11 +100,58 @@ body {
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
-  font-feature-settings: "pnum" on, "lnum" on;
+  font-feature-settings: "pnum"on, "lnum"on;
   color: #ffffff;
   cursor: pointer;
 }
 
 .start__button:hover {
   border: 3px solid #02922d;
+}
+
+.btn-two {
+  margin-top: 30px;
+  margin-right: 50px;
+}
+  
+.header__second-page {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 52px;
+  margin-bottom: 52px;
+}
+
+.cards {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 10px;
+
+}
+
+.card__back {
+  background: #FFFFFF;
+  border-radius: 4px;
+  width: 95px;
+  height: 133px;
+  background-image: url(img/рубашка.svg);
+  margin-bottom: 12px;
+}
+
+.timer {
+  width: 155px;
+  height: 91px;
+}
+
+.timer__number {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  color: #FFFFFF;
+}
+
+.timer__text {
+  font-weight: 300;
+  color: #FFFFFF; 
+  padding-left: 90px;
 }
