--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,407 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("stratosskyengweb-regular.woff2") format("woff2");
+    src: url('stratosskyengweb-regular.woff2') format("woff2");
 }
 
 * {
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    background-color: #004980;
+}
+
+.game__section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.choice-box {
+    align-items: center;
+    width: 480px;
+    height: 459px;
+    display: flex;
+    flex-direction: column;
+    background-color: #c2f5ff;
+    border-radius: 12px;
+}
+
+.title {
+    text-align: center;
+    width: 208px;
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: center;
+    color: #004980;
+    margin-bottom: 48px;
+    margin-top: 52px;
+}
+
+.complex {
+    display: flex;
+    gap: 26px;
+    margin-bottom: 67px;
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 72px;
+}
+
+.complex label {
+    display: inline-block;
+    padding: 10px 29px;
+    cursor: pointer;
+    border: 5px solid transparent;
+    border-radius: 12px;
+    background-color: white;
+    box-sizing: border-box;
+}
+
+.complex input[type='radio'] {
+    display: none;
+}
+
+.complex input[type='radio']:checked+label {
+    border: 5px solid #0080c1;
+}
+
+.complex label:hover {
+    border: 5px solid #7db7d4;
+}
+
+.start-btn {
+    border: none;
+    background: #7ac100;
+    border-radius: 12px;
+    width: 246px;
+    height: 50px;
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.start-btn:hover {
+    background-color: white;
+    border: 3px solid #7ac100;
+    color: #7ac100;
+}
+
+.center {
+    padding-left: calc(50% - 512px);
+    padding-right: calc(50% - 512px);
+}
+
+.header__second-page {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 22px;
+    margin-bottom: 52px;
+}
+
+.cards {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 10px;
+}
+
+.card__back {
+    background: #ffffff;
+    border-radius: 4px;
+    width: 95px;
+    height: 133px;
+    background-image: url(/static/shirt.png);
+    margin-bottom: 12px;
+}
+
+.restart_btn {
+    background: #7ac100;
+    border-radius: 12px;
+    width: 246px;
+    height: 50px;
+    margin-top: 30px;
+    margin-right: 50px;
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: white;
+}
+
+.restart_btn:hover {
+    border: 3px solid #02922d;
+}
+
+.timer {
+    width: 155px;
+    height: 91px;
+}
+
+.timer__number {
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 72px;
+    color: #ffffff;
+}
+
+.timer__text {
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 300;
+    color: #ffffff;
+    padding-left: 90px;
+}
+
+.timer {
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 300;
+    color: #ffffff;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.restart__button {
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    width: 246px;
+    height: 50px;
+    background: #7AC100;
+    border-radius: 12px;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    font-feature-settings: 'pnum'on, 'lnum'on;
+    color: #FFFFFF;
+    cursor: pointer;
+    border: none;
+}
+
+.game__card {
+    background: url(/static/shirt.png);
+    width: 93px;
+    height: 133px;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition: all 0.2s linear;
+    margin: 1%;
+
+    transform-style: preserve-3d;
+    /*transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);*/
+    box-shadow: rgb(0, 0, 0, 0.3) 15px 10px 10px;
+}
+
+.game__card_list {
+    max-width: 1024px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+}
+
+.flip {
+    transform: rotateY(180deg);
+}
+
+.game__card i {
+    font-size: 40px;
+    display: none;
+}
+
+.game__card i+i {
+    display: block;
+}
+
+.game__card.flip {
+    /* background: #5dc6ff; */
+    transform: perspective(100px) rotateY(180deg);
+}
+
+.game__card.flip i {
+    display: block;
+}
+
+.game__card.flip i+i {
+    display: none;
+}
+
+.game__card.successfully {
+    background-color: #76db82;
+}
+
+/*.game__card:hover {
+ 
+}*/
+
+.game__card.frontface-6b.flip {
+    background: url(/static/6diamonds.png);
+}
+
+.game__card.frontface-7b.flip {
+    background: url(/static/7diamonds.png);
+}
+
+.game__card.frontface-8b.flip {
+    background: url(/static/8diamonds.png);
+}
+
+.game__card.frontface-9b.flip {
+    background: url(/static/9diamonds.png);
+}
+
+.game__card.frontface-10b.flip {
+    background: url(/static/10diamonds.png);
+}
+
+.game__card.frontface-Jb.flip {
+    background: url(/static/Jdiamonds.png);
+}
+
+.game__card.frontface-Qb.flip {
+    background: url(/static/Qdiamonds.png);
+}
+
+.game__card.frontface-Kb.flip {
+    background: url(/static/Kdiamonds.png);
+}
+
+.game__card.frontface-Ab.flip {
+    background: url(/static/Adiamonds.png);
+}
+
+.game__card.frontface-6p.flip {
+    background: url(/static/6spades.png);
+}
+
+.game__card.frontface-7p.flip {
+    background: url(/static/7spades.png);
+}
+
+.game__card.frontface-8p.flip {
+    background: url(/static/8spades.png);
+}
+
+.game__card.frontface-9p.flip {
+    background: url(/static/9spades.png);
+}
+
+.game__card.frontface-10p.flip {
+    background: url(/static/10spades.png);
+}
+
+.game__card.frontface-Jp.flip {
+    background: url(/static/Jspades.png);
+}
+
+.game__card.frontface-Qp.flip {
+    background: url(/static/Qspades.png);
+}
+
+.game__card.frontface-Kp.flip {
+    background: url(/static/Kspades.png);
+}
+
+.game__card.frontface-Ap.flip {
+    background: url(/static/Aspades.png);
+}
+
+.game__card.frontface-6h.flip {
+    background: url(/static/6hearts.png);
+}
+
+.game__card.frontface-7h.flip {
+    background: url(/static/7hearts.png)
+
+}
+
+.game__card.frontface-8h.flip {
+    background: url(/static/8hearts.png);
+}
+
+.game__card.frontface-9h.flip {
+    background: url(/static/9hearts.png);
+}
+
+.game__card.frontface-10h.flip {
+    background: url(/static/10hearts.png);
+}
+
+.game__card.frontface-Jh.flip {
+    background: url(/static/Jhearts.png);
+}
+
+.game__card.frontface-Qh.flip {
+    background: url(/static/Qhearts.png);
+}
+
+.game__card.frontface-Kh.flip {
+    background: url(/static/Khearts.png)
+
+}
+
+.game__card.frontface-Ah.flip {
+    background: url(/static/Ahearts.png);
+}
+
+.game__card.frontface-6c.flip {
+    background: url(/static/6clubs.png);
+}
+
+.game__card.frontface-7c.flip {
+    background: url(/static/7clubs.png);
+}
+
+.game__card.frontface-8c.flip {
+    background: url(/static/8clubs.png);
+}
+
+.game__card.frontface-9c.flip {
+    background: url(/static/9clubs.png);
+}
+
+.game__card.frontface-10c.flip {
+    background: url(/static/10clubs.png);
+}
+
+.game__card.frontface-Jc.flip {
+    background: url(/static/Jclubs.png);
+}
+
+.game__card.frontface-Qc.flip {
+    background: url(/static/Qclubs.png);
+}
+
+.game__card.frontface-Kc.flip {
+    background: url(/static/Kclubs.png);
+}
+
+.game__card.frontface-Ac.flip {
+    background: url(/static/Aclubs.png);
+}
+
+
+
+/** {
     margin: 0;
     padding: 0;
 }
@@ -68,7 +465,28 @@ body {
     color: #fff;
 }
 
-.game__card_list {
+.game__card {
+    width: 93px;
+    height: 133px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition: all 0.2s linear;
+    margin: 1%;
+
+    transform-style: preserve-3d;
+    transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+    box-shadow: rgb(0, 0, 0, 0.3) 15px 10px 10px;
+    position: relative;    
+}
+.backface, 
+.frontface {
+    position: absolute;
+    pointer-events: none;
+} 
+
+.game__section{
     max-width: 1024px;
     display: flex;
     flex-wrap: wrap;
@@ -77,48 +495,31 @@ body {
     margin: auto;
 }
 
-.game__card {
-    background: url(/static/рубашка.svg);
-    width: 93px;
-    height: 133px;
-    aspect-ratio: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    transition: all 0.2s linear;
-    margin: 1%;
-}
-
-
-.game__card i {
+.game__card img {
     font-size: 40px;
-    display: none;
+    display: block;
 }
 
-.game__card i+i {
-    display: block;
+.game__card img+img {
+    display: none;
 }
 
 .game__card.flip {
-    transform: perspective(100px) rotateY(180deg);
+    transform-style: preserve-3d;
+    transform: rotateY(180eg);
 }
 
-.game__card.flip i {
-    display: block;
-}
-
-.game__card.flip i+i {
+.game__card.flip img {
     display: none;
 }
 
-.game__card.successfully {
-    background: #76db82;
+.game__card.flip img+img {
+    display: block;
 }
 
-/*.game__card:hover {
-    background: #d1d1c0;
-}*/
+.game__card_list.successfully {
+    background: #76db82;
+}
 
 .restart__button {
     width: 246px;
@@ -151,4 +552,4 @@ body {
     font-size: 64px;
     line-height: 72px;
     color: #FFFFFF;
-}
+}*/
